# habitat

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run_pipeline.sh
.github/workflows/: pages.yml
docs/: architecture.html  index.html  jepa-explorer.html
scripts/: __init__.py  analyze_scene.py  collect_trajectory.py  detect_objects.py  setup.sh
